--- a/src/app/posts/[slug]/_post.module.css
+++ b/src/app/posts/[slug]/_post.module.css
@@ -37,10 +37,29 @@
 
   .content :where(h2, h3, h4, h5, h6) {
     color: rgb(72 57 226 / 81%);
-    line-height: 1.35;
+    line-height: var(--lineHeight-heading);
     font-family: var(--font-cendra);
   }
 
+  .content :where(h2) {
+    font-size: clamp(22px, calc(0.8rem + 2.5cqw), 30px);
+  }
+
+  .content :where(h3) {
+    font-size: clamp(20px, calc(0.75rem + 2.25cqw), 26px);
+  }
+
+  .content :where(h4) {
+    font-size: clamp(18px, calc(0.7rem + 2cqw), 22px);
+  }
+
+  .content :where(h5) {
+    font-size: clamp(16px, calc(0.65rem + 1.75cqw), 20px);
+  }
+
+  .content :where(h6) {
+    font-size: clamp(14px, calc(0.6rem + 1.5cqw), 18px);
+  }
   .content :where(a) {
     color: rgb(223 0 151);
     font-weight: 500;
