--- a/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
+++ b/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
@@ -2,17 +2,18 @@
   .highlighter {
     --syntax-highlighter-gutter: var(--space-300);
     background: #090513;
-    border-radius: 6px;
+    border-radius: var(--radius-base);
     color: #fff;
+    container-type: inline-size;
     font-family: Monaco, Menlo, monospace;
-    line-height: 1.7;
+    line-height: var(--lineHeight-body);
     overflow: hidden;
   }
 
   .header {
     background: #191527;
     color: white;
-    font-size: 12px;
+    font-size: clamp(10px, calc(0.3125rem + 1.75cqw), 12px);
     font-weight: 600;
     padding: var(--space-100) var(--syntax-highlighter-gutter);
   }
@@ -23,7 +24,7 @@
 
   .pre {
     font-family: var(--font-mono);
-    font-size: 14px;
+    font-size: clamp(12px, calc(0.375rem + 1.75cqw), 14px);
     padding: var(--syntax-highlighter-gutter);
   }
 }
