--- a/src/app/posts/[slug]/_post.module.css
+++ b/src/app/posts/[slug]/_post.module.css
@@ -29,16 +29,22 @@
   }
 
   .content {
-    display: grid;
+    /* display: grid; */
     font-size: clamp(16px, calc(0.5rem + 1.75cqw), 20px);
-    grid-row-gap: 1.5em;
+    /* grid-row-gap: 1.5em; */
     padding-bottom: 20cqw;
+  }
+
+  .content > :where(*) {
+    margin-bottom: 1em;
   }
 
   .content :where(h2, h3, h4, h5, h6) {
     color: rgb(72 57 226 / 81%);
-    line-height: var(--lineHeight-heading);
     font-family: var(--font-cendra);
+    line-height: var(--lineHeight-heading);
+    margin-bottom: 0.75em;
+    margin-top: 1.5em;
   }
 
   .content :where(h2) {
@@ -73,6 +79,14 @@
     }
   }
 
+  .content > :where(ol, ul) {
+    padding-left: 2em;
+  }
+
+  .content > :where(ol, ul) > :where(li) {
+    margin-bottom: 0.25em;
+  }
+
   .content :where(img) {
     display: block;
     margin-left: auto;
@@ -84,5 +98,19 @@
     border-radius: 6px;
     padding: 0.125em 0.25em;
     font-size: 0.875em;
+  }
+
+  .content :where(iframe) {
+    aspect-ratio: 16 / 9;
+    height: auto;
+    width: 100%;
+  }
+
+  .content :where(strong) {
+    font-weight: 600;
+  }
+
+  .content > :where(:last-child) {
+    margin-bottom: 0;
   }
 }
