--- a/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
+++ b/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
@@ -25,6 +25,7 @@
   .pre {
     font-family: var(--font-mono);
     font-size: clamp(12px, calc(0.375rem + 1.75cqw), 14px);
+    overflow: auto;
     padding: var(--syntax-highlighter-gutter);
   }
 }
