--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -28,6 +28,10 @@
     margin-bottom: 1.35em;
   }
 
+  .publication {
+    margin-bottom: 0.5em;
+  }
+
   .postTitle {
     font-family: var(--font-cendra);
     font-size: clamp(18px, calc(0.5625rem + 1.75cqw), 24px);
@@ -35,8 +39,7 @@
     margin-bottom: 0.25em;
   }
 
-  .postDescription {
-  }
+  /* .postDescription {} */
 
   @media (hover) {
     .postLink:hover {
