--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,11 +19,17 @@
     --color-text-primary: 0 0 0;
     --color-surface-background: 255 255 255;
 
+    --font-cendra: cendra-web, cendra-web-fallback-helvetica-neue,
+      cendra-web-fallback-arial;
+    /* --font-inter defined with JS import */
+    --font-system: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+
+    --font-heading: var(--font-cendra), var(--font-system);
     --font-mono: "Monaco", ui-monospace, SFMono-Regular, "Menlo", "Consolas",
       "Roboto Mono", "Ubuntu Monospace", "Noto Mono", "Oxygen Mono",
       "Liberation Mono", monospace;
-    --font-cendra: cendra-web, cendra-web-fallback-helvetica-neue,
-      cendra-web-fallback-arial, var(--font-mono);
     --font-sans: var(--font-inter), system-ui, -apple-system, BlinkMacSystemFont,
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
@@ -60,17 +66,6 @@
       var(--layout-gutter),
       calc((100vw - var(--layout-container-width-narrow)) / 2)
     );
-  }
-
-  html {
-    background: rgb(var(--color-surface-background));
-    color: rgb(var(--color-text-primary));
-    line-height: var(--lineHeight-body);
-    -webkit-font-smoothing: antialiased;
-  }
-
-  body {
-    font-family: var(--font-sans);
   }
 
   a {
