--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,23 +39,7 @@
 
     --radius-base: 6px;
 
-    --space-25: 2px;
-    --space-50: 4px;
-    --space-100: 8px;
-    --space-150: 12px;
-    --space-200: 16px;
-    --space-300: 24px;
-    --space-400: 32px;
-    --space-500: 40px;
-    --space-600: 48px;
-    --space-700: 56px;
-    --space-800: 64px;
-    --space-900: 80px;
-    --space-1000: 96px;
-    --space-1100: 112px;
-    --space-1200: 128px;
-
-    --layout-gutter: var(--space-300);
+    --layout-gutter: theme(size.6);
     --layout-container-width: 1280px;
     --layout-container-width-narrow: clamp(700px, 43.75rem, 800px);
     --layout-container-width-padding-x: max(
