--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,43 +1,28 @@
-@import "src/app/font-cendra.css";
+@layer theme, base, base.local, components, utilities;
 
-@layer base.tailwind, base.local, component.tailwind, component.local, utility;
+@import "tailwindcss";
 
-@layer base.tailwind {
-  @tailwind base;
+@theme {
+  --padding-container-w: var(--layout-container-width-padding-x);
+  --padding-container-w-narrow: var(--layout-container-width-narrow-padding-x);
+
+  --font-cendra: cendra-web, cendra-web-fallback-helvetica-neue,
+    cendra-web-fallback-arial;
+  --font-heading: var(--font-cendra), var(--font-system);
+  --font-mono: "Monaco", ui-monospace, SFMono-Regular, "Menlo", "Consolas",
+    "Roboto Mono", "Ubuntu Monospace", "Noto Mono", "Oxygen Mono",
+    "Liberation Mono", monospace;
+  --font-sans: var(--font-inter), system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  --font-system: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-@layer component.tailwind {
-  @tailwind components;
-}
-
-@layer utility.tailwind {
-  @tailwind utilities;
-}
-
-@layer base.local {
-  :root {
-    --font-cendra: cendra-web, cendra-web-fallback-helvetica-neue,
-      cendra-web-fallback-arial;
-    /* --font-inter defined with JS import */
-    --font-system: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-      sans-serif;
-
-    --font-heading: var(--font-cendra), var(--font-system);
-    --font-mono: "Monaco", ui-monospace, SFMono-Regular, "Menlo", "Consolas",
-      "Roboto Mono", "Ubuntu Monospace", "Noto Mono", "Oxygen Mono",
-      "Liberation Mono", monospace;
-    --font-sans: var(--font-inter), system-ui, -apple-system, BlinkMacSystemFont,
-      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-      "Helvetica Neue", sans-serif;
-
-    --lineHeight-body: 1.5;
-    --lineHeight-heading: 1.25;
-
-    --radius-base: 6px;
-
-    /* biome-ignore lint/correctness/noUnknownFunction: Tailwind theme function */
-    --layout-gutter: theme("size.6");
+@layer theme {
+  :root,
+  :host {
+    --layout-gutter: calc(var(--spacing) * 6);
     --layout-container-width: 1280px;
     --layout-container-width-narrow: clamp(700px, 43.75rem, 800px);
     --layout-container-width-padding-x: max(
@@ -49,7 +34,9 @@
       calc((100vw - var(--layout-container-width-narrow)) / 2)
     );
   }
+}
 
+@layer base.local {
   :focus-visible {
     outline: 3px solid rgb(223 0 151);
     outline-offset: 2px;
