--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,17 +6,18 @@
   --padding-container-w: var(--layout-container-width-padding-x);
   --padding-container-w-narrow: var(--layout-container-width-narrow-padding-x);
 
-  --font-cendra: cendra-web, cendra-web-fallback-helvetica-neue,
-    cendra-web-fallback-arial;
+  --font-cendra:
+    cendra-web, cendra-web-fallback-helvetica-neue, cendra-web-fallback-arial;
   --font-heading: var(--font-cendra), var(--font-system);
-  --font-mono: "Monaco", ui-monospace, SFMono-Regular, "Menlo", "Consolas",
-    "Roboto Mono", "Ubuntu Monospace", "Noto Mono", "Oxygen Mono",
-    "Liberation Mono", monospace;
-  --font-sans: var(--font-inter), system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
-  --font-system: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  --font-mono:
+    "Monaco", ui-monospace, SFMono-Regular, "Menlo", "Consolas", "Roboto Mono",
+    "Ubuntu Monospace", "Noto Mono", "Oxygen Mono", "Liberation Mono", monospace;
+  --font-sans:
+    var(--font-inter), system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --font-system:
+    system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 @layer theme {
