Squashed branch smiley
commit 1b055c587e3ffe0f69262e646524a8f5e2a9a5c7
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Sun Jun 29 09:42:04 2025 -0500

    Update to sticky header

commit 59ccb671ab35a646c4abf42100ebc20122c2d71b
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Sun Jun 29 09:41:57 2025 -0500

    Update mobile gutter

commit 6ab1224a084fd06480a9cee8d9e0eb0294cc8696
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Sun Jun 29 09:04:15 2025 -0500

    Add smiley to header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
 @layer theme {
   :root,
   :host {
-    --layout-gutter: calc(var(--spacing) * 6);
+    --layout-gutter: calc(var(--spacing) * 4);
     --layout-container-width: 1280px;
     --layout-container-width-narrow: clamp(700px, 43.75rem, 800px);
     --layout-container-width-padding-x: max(
@@ -34,6 +34,10 @@
       var(--layout-gutter),
       calc((100vw - var(--layout-container-width-narrow)) / 2)
     );
+
+    @media (width >= 40rem) {
+      --layout-gutter: calc(var(--spacing) * 6);
+    }
   }
 }
 
