--- a/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
+++ b/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
@@ -26,6 +26,10 @@
     font-family: var(--font-mono);
     font-size: clamp(12px, calc(0.375rem + 1.75cqw), 14px);
     overflow: auto;
-    padding: var(--syntax-highlighter-gutter);
+    padding: calc(var(--spacing) * 4) var(--syntax-highlighter-gutter);
+
+    @media (width >= 40rem) {
+      padding-block: calc(var(--spacing) * 6);
+    }
   }
 }
