Squashed branch feColorMatrix
commit 623158ec6331b92a7b4f0422f5881c087cda8bd0
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Thu Jul 3 12:47:54 2025 -0500

    Update post

commit 0ccc527e325d10b07b369275306807433bbe207f
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Thu Jul 3 12:34:42 2025 -0500

    Update SyntaxHighlighter copy colors

commit e212b635b322a172b9623c039412e400ae0f3bb5
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Thu Jul 3 12:28:11 2025 -0500

    Update post and demos

commit c25f0a32eb2e3e18c8698032ee45c0a98dda2bfc
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Thu Jul 3 10:09:31 2025 -0500

    Clean up matrix demo controls

commit 32bc21be9a4d00ee6d0f91bf7faddbaee77720e8
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Thu Jul 3 09:24:44 2025 -0500

    Update post

commit 92ed5665332cc36552eaa3ed9671914e01220d29
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Thu Jul 3 07:52:33 2025 -0500

    Update post copy and demos

commit 7d0dd88628b4e56f9f39b2afc14fce8604b12d68
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Wed Jul 2 11:00:52 2025 -0500

    Add post scaffold

--- a/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
+++ b/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
@@ -1,7 +1,7 @@
 @layer components {
   .highlighter {
     --syntax-highlighter-gutter: calc(var(--spacing) * 6);
-    background: #090513;
+    background: var(--color-gray-900);
     border-radius: var(--radius-md);
     color: #fff;
     container-type: inline-size;
@@ -11,8 +11,11 @@
   }
 
   .header {
-    background: #191527;
+    background: var(--color-gray-800);
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     font-size: clamp(10px, calc(0.3125rem + 1.75cqw), 12px);
     font-weight: 600;
     padding: calc(var(--spacing) * 2) var(--syntax-highlighter-gutter);
