--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,3 +52,15 @@
     background: rgb(223 0 152 / 0.2);
   }
 }
+
+@layer utilities {
+  .bg-checkered {
+    background-image: 
+      linear-gradient(45deg, rgb(0 0 0 / 0.2) 25%, transparent 25%), 
+      linear-gradient(-45deg, rgb(0 0 0 / 0.2) 25%, transparent 25%), 
+      linear-gradient(45deg, transparent 75%, rgb(0 0 0 / 0.2) 75%), 
+      linear-gradient(-45deg, transparent 75%, rgb(0 0 0 / 0.2) 75%);
+    background-size: 20px 20px;
+    background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+  }
+}
