--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,13 @@
       --layout-gutter: calc(var(--spacing) * 6);
     }
   }
+
+  *,
+  ::before,
+  ::after {
+    text-decoration-thickness: 0.075em;
+    text-underline-offset: 0.25em;
+  }
 }
 
 @layer base.local {
@@ -55,12 +62,16 @@
 
 @layer utilities {
   .bg-checkered {
-    background-image: 
-      linear-gradient(45deg, rgb(0 0 0 / 0.2) 25%, transparent 25%), 
-      linear-gradient(-45deg, rgb(0 0 0 / 0.2) 25%, transparent 25%), 
-      linear-gradient(45deg, transparent 75%, rgb(0 0 0 / 0.2) 75%), 
+    background-image:
+      linear-gradient(45deg, rgb(0 0 0 / 0.2) 25%, transparent 25%),
+      linear-gradient(-45deg, rgb(0 0 0 / 0.2) 25%, transparent 25%),
+      linear-gradient(45deg, transparent 75%, rgb(0 0 0 / 0.2) 75%),
       linear-gradient(-45deg, transparent 75%, rgb(0 0 0 / 0.2) 75%);
     background-size: 20px 20px;
-    background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+    background-position:
+      0 0,
+      0 10px,
+      10px -10px,
+      -10px 0px;
   }
 }
