Update styles to black and gray

--- a/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
+++ b/src/components/SyntaxHighlighter/SyntaxHighlighter.module.css
@@ -1,24 +1,40 @@
 @layer components {
   .highlighter {
     --syntax-highlighter-gutter: calc(var(--spacing) * 6);
-    background: var(--color-gray-900);
-    border-radius: var(--radius-xl);
-    color: #fff;
+    --syntax-highlighter-shadow-offset: 10px;
+    --syntax-highlighter-skew: 1deg;
+    background: var(--color-black);
+    color: color(--color-white);
     container-type: inline-size;
-    font-family: Monaco, Menlo, monospace;
     line-height: var(--leading-normal);
-    overflow: hidden;
+    margin-right: var(--syntax-highlighter-shadow-offset);
+    position: relative;
+    transform: skew(calc(var(--syntax-highlighter-skew) * -1));
+
+    &::before {
+      border: 2px solid var(--color-black);
+      content: "";
+      height: 100%;
+      left: var(--syntax-highlighter-shadow-offset);
+      position: absolute;
+      top: 10px;
+      width: 100%;
+    }
+
+    @media screen and (min-width: 800px) {
+      --syntax-highlighter-skew: 2deg;
+    }
   }
 
   .header {
-    background: var(--color-gray-800);
-    color: white;
-    display: flex;
     align-items: center;
+    display: flex;
+    color: var(--color-white);
     justify-content: space-between;
     font-size: clamp(10px, calc(0.3125rem + 1.75cqw), 12px);
     font-weight: 600;
-    padding: calc(var(--spacing) * 2) var(--syntax-highlighter-gutter);
+    padding: var(--spacing) var(--syntax-highlighter-gutter);
+    transform: skew(var(--syntax-highlighter-skew));
   }
 
   .headerCaps {
@@ -29,6 +45,7 @@
     font-family: var(--font-mono);
     font-size: clamp(12px, calc(0.375rem + 1.75cqw), 14px);
     overflow: auto;
+    transform: skew(var(--syntax-highlighter-skew));
     padding: calc(var(--spacing) * 4) var(--syntax-highlighter-gutter);
 
     @media (width >= 40rem) {
